AC_INIT([dissemina], [@@VERSION@@], [scvalex@gmail.com])

## Checks for programs
AC_MSG_NOTICE([CHECKS for programs])
#
AC_PROG_CC([cc gcc])
AC_LANG_C

## Checks for libraries
AC_MSG_NOTICE([CHECKS for libraries])
#
AC_CHECK_LIB([c], [socket])

## Checks for headers
AC_MSG_NOTICE([CHECKS for headers])
#
AC_HEADER_STDC

